force-app/main/default/objects/Load_Calculator_IDW__mdt/Load_Calculator_IDW__mdt.object-meta.xml
<CustomObject>
    <label>Load Calculator IDW</label>
    <pluralLabel>Load Calculators IDW</pluralLabel>
</CustomObject>