force-app/main/default/objects/Load_Calculator_IDW__mdt/fields/ProTech_411_Plus__c.field-meta.xml
<CustomField>
    <fullName>ProTech_411_Plus__c</fullName>
    <label>ProTech 411 Plus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>