force-app/main/default/objects/Load_Calculator_IDW__mdt/fields/ProTech_813__c.field-meta.xml
<CustomField>
    <fullName>ProTech_813__c</fullName>
    <label>ProTech 813</label>
    <length>255</length>
    <type>Text</type>
</CustomField>