force-app/main/default/objects/Load_Calculator_IDW__mdt/fields/ProTech_913__c.field-meta.xml
<CustomField>
    <fullName>ProTech_913__c</fullName>
    <label>ProTech 913</label>
    <length>255</length>
    <type>Text</type>
</CustomField>